# STAGE-BO

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_method.py
src/: __init__.py  config.py  runner.py  runtime.py
src/algorithms/: __init__.py  constrained_mobo.py  constrained_stage_bo.py  constraint_selection.py  metrics.py  mobo.py  scbo.py  stage_bo.py
src/models/: __init__.py  gp.py
src/problems/: __init__.py  constrained_realworld.py  objective_function.py  realworld.py  reference_points.py  registry.py  reproblem.py
src/problems/definitions/: __init__.py  constrained_realworld.py  objective_function.py  realworld.py  reference_points.py  reproblem.py
src/solvers/: __init__.py  solver.py
tests/: test_constraint_selection.py
